feat: Convert to VSCode Extension
- Restructure project: src/ (extension host) + webview-ui/ (React)
- Replace Pyodide with VSCode Terminal for Python execution
- Add VSCode theme synchronization via CSS variables
- Implement secure API key storage via vscode.secrets
- Add message passing bridge between extension and webview
- Rename app to Tektite (Code from the Stars)
- Add debugging configuration (.vscode/launch.json)
- Create .vscodeignore for optimized VSIX packaging

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,29 +1,26 @@
 {
   "compilerOptions": {
-    "target": "ES2022",
-    "experimentalDecorators": true,
-    "useDefineForClassFields": false,
-    "module": "ESNext",
+    "module": "commonjs",
+    "target": "ES2021",
     "lib": [
-      "ES2022",
-      "DOM",
-      "DOM.Iterable"
+      "ES2021"
     ],
+    "outDir": "out",
+    "rootDir": "src",
+    "strict": true,
+    "esModuleInterop": true,
     "skipLibCheck": true,
-    "types": [
-      "node"
-    ],
-    "moduleResolution": "bundler",
-    "isolatedModules": true,
-    "moduleDetection": "force",
-    "allowJs": true,
-    "jsx": "react-jsx",
-    "paths": {
-      "@/*": [
-        "./*"
-      ]
-    },
-    "allowImportingTsExtensions": true,
-    "noEmit": true
-  }
+    "forceConsistentCasingInFileNames": true,
+    "resolveJsonModule": true,
+    "declaration": true,
+    "sourceMap": true
+  },
+  "include": [
+    "src/**/*"
+  ],
+  "exclude": [
+    "webview-ui",
+    "node_modules",
+    "out"
+  ]
 }
