--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,33 @@
+# Dependencies
+node_modules/
+webview-ui/node_modules/
+
+# Build output
+out/
+dist/
+webview-ui/dist/
+
+# VS Code Extension
+*.vsix
+
+# Environment files
+.env
+.env.local
+.env*.local
+
+# IDE
+.vscode/*
+!.vscode/launch.json
+!.vscode/tasks.json
+.idea/
+
+# OS
+.DS_Store
+Thumbs.db
+
 # Logs
-logs
 *.log
 npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
-
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
-.DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+# TypeScript
+*.tsbuildinfo
