--- a/package.json
+++ b/package.json
@@ -1,24 +1,66 @@
 {
-  "name": "vscode-extention-ver.-:tektite(mindgraph-code,-code-from-the-stars)",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+  "name": "tektite",
+  "displayName": "Tektite - Code from the Stars",
+  "description": "Think in Graphs, Write in Blocks. A Code Knowledge Graph visualizer for your codebase.",
+  "version": "0.1.0",
+  "publisher": "tektite",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/alex6095/tektite-vscode-ext"
   },
-  "dependencies": {
-    "react": "^19.2.3",
-    "react-dom": "^19.2.3",
-    "lucide-react": "^0.561.0",
-    "d3": "^7.9.0",
-    "@google/genai": "^1.33.0"
+  "engines": {
+    "vscode": "^1.85.0"
+  },
+  "categories": [
+    "Visualization",
+    "Other"
+  ],
+  "keywords": [
+    "graph",
+    "visualization",
+    "code",
+    "knowledge graph",
+    "python"
+  ],
+  "activationEvents": [],
+  "main": "./out/extension.js",
+  "contributes": {
+    "commands": [
+      {
+        "command": "tektite.openGraph",
+        "title": "Tektite: Open Code Graph"
+      },
+      {
+        "command": "tektite.setApiKey",
+        "title": "Tektite: Set Gemini API Key"
+      }
+    ],
+    "configuration": {
+      "title": "Tektite",
+      "properties": {
+        "tektite.pythonPath": {
+          "type": "string",
+          "default": "python3",
+          "description": "Path to Python interpreter for code execution"
+        }
+      }
+    }
+  },
+  "scripts": {
+    "vscode:prepublish": "npm run compile && npm run build:webview",
+    "compile": "tsc -p ./",
+    "watch": "tsc -watch -p ./",
+    "build:webview": "cd webview-ui && npm run build",
+    "dev:webview": "cd webview-ui && npm run dev",
+    "package": "vsce package"
   },
   "devDependencies": {
-    "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.0.0",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "@types/vscode": "^1.85.0",
+    "@types/node": "^20.0.0",
+    "typescript": "^5.3.0",
+    "@google/genai": "^1.33.0"
+  },
+  "dependencies": {
+    "@google/genai": "^1.33.0"
   }
 }
