--- a/package.json
+++ b/package.json
@@ -48,8 +48,8 @@
   },
   "scripts": {
     "vscode:prepublish": "npm run compile && npm run build:webview",
-    "compile": "tsc -p ./",
-    "watch": "tsc -watch -p ./",
+    "compile": "node esbuild.js --production",
+    "watch": "node esbuild.js --watch",
     "build:webview": "cd webview-ui && npm run build",
     "dev:webview": "cd webview-ui && npm run dev",
     "package": "vsce package"
@@ -58,7 +58,8 @@
     "@types/vscode": "^1.85.0",
     "@types/node": "^20.0.0",
     "typescript": "^5.3.0",
-    "@google/genai": "^1.33.0"
+    "@google/genai": "^1.33.0",
+    "esbuild": "^0.24.0"
   },
   "dependencies": {
     "@google/genai": "^1.33.0"
